deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-conversao
spec:
  replicas: 5
  selector:
    matchLabels:
      app: api-conversao
  template:
    metadata:
      labels:
        app: api-conversao
    spec:
      containers:
        - name: api-conversao
          image: adolfombarros/api-conversao:latest
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: api-conversao-service
spec:
  selector:
    app: api-conversao
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
  type: NodePort
