deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-conversao
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: api-conversao
  template:
    metadata:
      labels:
        app: api-conversao
    spec:
      containers:
        - name: api-conversao
          image: adolfombarros/api-conversao:latest
          ports:
            - containerPort: 8080
          livenessProbe: #teste get health
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 2
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 1
          readinessProbe: #teste get ready
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 2
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 1
          resources:
            requests:
              cpu: "200m"
              memory: "32Mi"
            limits:
              cpu: "400m"
              memory: "64Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: api-conversao-service
spec:
  selector:
    app: api-conversao
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  #  nodePort: 30000
  #type: NodePort

---

apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: api-hpa
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment 
    name: api-conversao
  minReplicas: 2
  maxReplicas: 10
  targetCPUUtilizationPercentage: 60

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-conversao-ingress 
spec:
  rules:
  - host: api-conversao.164.90.253.38.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-conversao-service
            port: 
              number: 80
